--- a/play.yml
+++ b/play.yml
@@ -19,7 +19,7 @@
 
     - name: ensure to reload systemd
       ansible.builtin.systemd:
-        state: restarted
+        daemon_reload: true
 
     - name: ensure my-app is started
       ansible.builtin.service:
